# Mini_Commander_Console

./: CMakeLists.txt  DOCUMENTATION_CODE.md  DOCUMENTATION_CODE.txt  README.md  USER_GUIDE.txt  main.cpp
helper_cpp/: helper_text.cpp
helper_cpp/console/: CMDCOMMAND.cpp  color_console.cpp  date_and_time.cpp  debug_some_command.cpp  helper_clear_console.cpp  helper_for_help.cpp
helper_cpp/helper/: debug.cpp  print.cpp
helper_cpp/helper_for_find_folder_file/: helper_for_find_FF.cpp
helper_cpp/work_with_files/: for_time.cpp  free_space.cpp  helper_create_file.cpp  helper_delete_file.cpp  helper_open_file.cpp  helper_rename_files.cpp  reading_file.cpp
helper_cpp/work_with_txt/: helper_txt.cpp
helper_header/: helper_text.h
helper_header/console/: CMDCOMMAND.h  color_console.h  date_and_time.h  debug_some_command.h  helper_clear_console.h  helper_for_help.h
helper_header/helper/: debug.h  print.h
helper_header/helper_for_find_folder_file/: helper_for_find_FF.h
helper_header/work_with_files/: for_time.h  free_space.h  helper_create_file.h  helper_delete_file.h  helper_open_file.h  helper_rename_files.h  include_for_work_with_files.h  reading_file.h
helper_header/work_with_txt/: helper_txt.h
